--- a/CustomRPC/UpdatePrompt.he.resx
+++ b/CustomRPC/UpdatePrompt.he.resx
@@ -144,7 +144,7 @@
     <value>132, 23</value>
   </data>
   <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>דלג על הגרסה הזאת</value>
+    <value>דלג על הגרסה הזו</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="$this.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
@@ -155,6 +155,6 @@
     <value>True</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>עדכון זמין</value>
+    <value>עדכון חדש זמין</value>
   </data>
 </root>
