Updated Hebrew and Indonesian

--- a/CustomRPC/MainForm.he.resx
+++ b/CustomRPC/MainForm.he.resx
@@ -350,7 +350,7 @@
     <value>כלום</value>
   </data>
   <data name="radioButtonNone.ToolTip" xml:space="preserve">
-    <value>אין חותמות זמן פעילות כעת</value>
+    <value>אין חותמות זמן פעילות כעת.</value>
   </data>
   <data name="radioButtonStartTime.Location" type="System.Drawing.Point, System.Drawing">
     <value>123, 28</value>
@@ -438,9 +438,6 @@
   </data>
   <data name="labelPartyOf.Text" xml:space="preserve">
     <value>של</value>
-  </data>
-  <data name="statusStrip.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="toolStripStatusLabelPadding.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
