--- a/CustomRPC/Strings.resx
+++ b/CustomRPC/Strings.resx
@@ -166,4 +166,8 @@ You can open it any time by going to Help -&gt; Open the Manual or pressing F1.<
   <data name="noUpdatesFound" xml:space="preserve">
     <value>No updates found!</value>
   </data>
+  <data name="errorCorruptSettings" xml:space="preserve">
+    <value>Settings file is corrupted.
+Press Yes to reset the settings, press No to quit.</value>
+  </data>
 </root>
