--- a/CustomRPC/Strings.de.resx
+++ b/CustomRPC/Strings.de.resx
@@ -159,12 +159,16 @@ Du kannst es jederzeit unter Hilfe -&gt; Öffne das Handbuch oder mit der F1-Tas
 Bist du sicher, dass es läuft?</comment>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
-    <value>Ungültige URL für Schaltfläche(n) angegeben oder der Text ist zu lang!</value>
+    <value>Ungültige URL für die Knöpfe angegeben oder der Text ist zu lang!</value>
   </data>
   <data name="errorNoInternet" xml:space="preserve">
     <value>Keine Internetverbindung!</value>
   </data>
   <data name="noUpdatesFound" xml:space="preserve">
     <value>Keine Updates gefunden!</value>
+  </data>
+  <data name="errorCorruptSettings" xml:space="preserve">
+    <value>Einstellungen Datei ist Beschädigt.
+Drücke "Ja" um sie zurückzusetzen oder "Nein" um zu verlassen.</value>
   </data>
 </root>
