--- a/CustomRPC/Strings.zh-Hant.resx
+++ b/CustomRPC/Strings.zh-Hant.resx
@@ -161,4 +161,8 @@
   <data name="noUpdatesFound" xml:space="preserve">
     <value>沒有新版本更新！</value>
   </data>
+  <data name="errorCorruptSettings" xml:space="preserve">
+    <value>設定檔已損毀。
+按「是」重設，按「否」離開。</value>
+  </data>
 </root>
