--- a/CustomRPC/Strings.uk.resx
+++ b/CustomRPC/Strings.uk.resx
@@ -161,4 +161,8 @@
   <data name="noUpdatesFound" xml:space="preserve">
     <value>Не знайдено оновлень!</value>
   </data>
+  <data name="errorCorruptSettings" xml:space="preserve">
+    <value>Файл налаштувань пошкоджено.
+Натисніть Так для сбросу параметрів, або Ні для виходу.</value>
+  </data>
 </root>
