--- a/CustomRPC/Strings.ku.resx
+++ b/CustomRPC/Strings.ku.resx
@@ -161,4 +161,8 @@
   <data name="noUpdatesFound" xml:space="preserve">
     <value>هیچ نوێکردنەوەیەک نەدۆزرایەوە!</value>
   </data>
+  <data name="errorCorruptSettings" xml:space="preserve">
+    <value>فایلی ڕێکبەندەکان تێکچووە.
+فشار بکە بە بەڵێ بۆ ڕێکخستنەوەی ڕێکبەندەکان، فشار بکە سەر نەخێر بۆ وازهێنان.</value>
+  </data>
 </root>
