--- a/CustomRPC/Strings.nl.resx
+++ b/CustomRPC/Strings.nl.resx
@@ -161,4 +161,8 @@ Je kunt het op elk moment openen door naar Help -&gt; Open de handleiding te gaa
   <data name="noUpdatesFound" xml:space="preserve">
     <value>Geen updates gevonden!</value>
   </data>
+  <data name="errorCorruptSettings" xml:space="preserve">
+    <value>Het instellingenbestand is beschadigd.
+Druk op Ja om de instellingen te resetten, druk op Nee om te stoppen.</value>
+  </data>
 </root>
