--- a/CustomRPC/Strings.ru.resx
+++ b/CustomRPC/Strings.ru.resx
@@ -171,4 +171,7 @@
     <value>Файл с настройками повреждён.
 Нажмите Да, чтобы сбросить настройки, или нажмите Нет, чтобы выйти.</value>
   </data>
+  <data name="errorInvalidPresetFile" xml:space="preserve">
+    <value>Не удалось импортировать пресет: файл отсутствует, повреждён, или имеет неверный формат.</value>
+  </data>
 </root>
